deleted unused document controller + unused factories + unused packages + unused users seed
