# API/api/controllers/document.js
@@ -1,281 +1,0 @@
-var _           = require('lodash');
-var defaultLog  = require('winston').loggers.get('default');
-var mongoose    = require('mongoose');
-var mime        = require('mime-types');
-var Actions     = require('../helpers/actions');
-var Utils       = require('../helpers/utils');
-var FlakeIdGen  = require('flake-idgen');
-var intformat   = require('biguint-format');
-var generator   = new FlakeIdGen(); // new FlakeIdGen;
-var fs          = require('fs');
-var uploadDir   = "./uploads/";
-var ENABLE_VIRUS_SCANNING = process.env.ENABLE_VIRUS_SCANNING || false;
-var tagList     = ['displayName',
-                   'internalURL',
-                   'passedAVCheck',
-                   'documentFileName',
-                   'internalMime'];
-
-var getSanitizedFields = function (fields) {
-  return _.remove(fields, function (f) {
-    return (_.indexOf(tagList, f) !== -1);
-  });
-};
-
-exports.protectedOptions = function (args, res, rest) {
-  res.status(200).send();
-};
-
-exports.protectedHead = function (args, res, next) {
-  // Build match query if on docId route
-  var query = {};
-  if (args.swagger.params.docId) {
-    query = Utils.buildQuery("_id", args.swagger.params.docId.value, query);
-  }
-  if (args.swagger.params._application && args.swagger.params._application.value) {
-    query = Utils.buildQuery("_application", args.swagger.params._application.value, query);
-  }
-  if (args.swagger.params._comment && args.swagger.params._comment.value) {
-    query = Utils.buildQuery("_comment", args.swagger.params._comment.value, query);
-  }
-  if (args.swagger.params._decision && args.swagger.params._decision.value) {
-    query = Utils.buildQuery("_decision", args.swagger.params._decision.value, query);
-  }
-  // Unless they specifically ask for it, hide deleted results.
-  if (args.swagger.params.isDeleted && args.swagger.params.isDeleted.value != undefined) {
-    _.assignIn(query, { isDeleted: args.swagger.params.isDeleted.value });
-  } else {
-    _.assignIn(query, { isDeleted: false });
-  }
-
-  Utils.runDataQuery('Document',
-                    null, // role
-                    query,
-                    ['_id',
-                      'tags'], // Fields
-                    null, // sort warmup
-                    null, // sort
-                    null, // skip
-                    null, // limit
-                    true) // count
-  .then(function (data) {
-    // /api/commentperiod/ route, return 200 OK with 0 items if necessary
-    if (!(args.swagger.params.docId && args.swagger.params.docId.value) || (data && data.length > 0)) {
-      res.setHeader('x-total-count', data && data.length > 0 ? data[0].total_items: 0);
-      return Actions.sendResponse(res, 200, data);
-    } else {
-      return Actions.sendResponse(res, 404, data);
-    }
-  });
-};
-
-exports.protectedGet = function(args, res, next) {
-  // Build match query if on docId route
-  var query = {};
-  if (args.swagger.params.docId) {
-    query = Utils.buildQuery("_id", args.swagger.params.docId.value, query);
-  }
-  if (args.swagger.params._application && args.swagger.params._application.value) {
-    query = Utils.buildQuery("_application", args.swagger.params._application.value, query);
-  }
-  if (args.swagger.params._comment && args.swagger.params._comment.value) {
-    query = Utils.buildQuery("_comment", args.swagger.params._comment.value, query);
-  }
-  if (args.swagger.params._decision && args.swagger.params._decision.value) {
-    query = Utils.buildQuery("_decision", args.swagger.params._decision.value, query);
-  }
-  
-  // Unless they specifically ask for it, hide deleted results.
-  if (args.swagger.params.isDeleted && args.swagger.params.isDeleted.value != undefined) {
-    _.assignIn(query, { isDeleted: args.swagger.params.isDeleted.value });
-  } else {
-    _.assignIn(query, { isDeleted: false });
-  }
-
-  Utils.runDataQuery('Document',
-                    null, // role
-                    query,
-                    getSanitizedFields(args.swagger.params.fields.value), // Fields
-                    null, // sort warmup
-                    null, // sort
-                    null, // skip
-                    null, // limit
-                    false) // count
-  .then(function (data) {
-    return Actions.sendResponse(res, 200, data);
-  });
-};
-
-
-// Create a new document.
-exports.protectedPost = function (args, res, next) {
-  console.log("Creating new object");
-  var _application  = args.swagger.params._application.value;
-  var _comment      = args.swagger.params._comment.value;
-  var _decision     = args.swagger.params._decision.value;
-  var displayName   = args.swagger.params.displayName.value;
-  var upfile        = args.swagger.params.upfile.value;
-
-  var guid = intformat(generator.next(), 'dec');
-  var ext = mime.extension(args.swagger.params.upfile.value.mimetype);
-  try {
-    Promise.resolve()
-    .then(function () {
-      if (ENABLE_VIRUS_SCANNING == 'true') {
-        return Utils.avScan(args.swagger.params.upfile.value.buffer);
-      } else {
-        return true;
-      }
-    })
-    .then(function (valid) {
-      if (!valid) {
-        defaultLog.warn("File failed virus check.");
-        return Actions.sendResponse(res, 400, {"message" : "File failed virus check."});
-      } else {
-        fs.writeFileSync(uploadDir+guid+"."+ext, args.swagger.params.upfile.value.buffer);
-
-        var Document = mongoose.model('Document');
-        var doc = new Document();
-        // Define security tag defaults
-        doc.tags = [['sysadmin']];
-        doc._application = _application;
-        doc._comment = _comment;
-        doc._decision = _decision;
-        doc.displayName = displayName;
-        doc.documentFileName = upfile.originalname;
-        doc.internalMime = upfile.mimetype;
-        doc.internalURL = uploadDir+guid+"."+ext;
-        doc.passedAVCheck = true;
-        // Update who did this?
-        doc._addedBy = args.swagger.params.auth_payload.preferred_username;
-        doc.save()
-        .then(function (d) {
-          defaultLog.info("Saved new document object:", d._id);
-          return Actions.sendResponse(res, 200, d);
-        });
-      }
-    });
-  } catch (e) {
-    defaultLog.info("Error:", e);
-    // Delete the path details before we return to the caller.
-    delete e['path'];
-    return Actions.sendResponse(res, 400, e);
-  }
-};
-
-// Update an existing document.
-exports.protectedPut = function (args, res, next) {
-  // defaultLog.info("upfile:", args.swagger.params.upfile);
-  var objId = args.swagger.params.docId.value;
-  var _application  = args.swagger.params._application.value;
-  var _comment      = args.swagger.params._comment.value;
-  var _decision     = args.swagger.params._decision.value;
-  defaultLog.info("ObjectID:", args.swagger.params.docId.value);
-
-  var guid = intformat(generator.next(), 'dec');
-  var ext = mime.extension(args.swagger.params.upfile.value.mimetype);
-  try {
-    Promise.resolve()
-    .then(function () {
-      if (ENABLE_VIRUS_SCANNING == 'true') {
-        return Utils.avScan(args.swagger.params.upfile.value.buffer);
-      } else {
-        return true;
-      }
-    })
-    .then(function (valid) {
-      if (!valid) {
-        defaultLog.warn("File failed virus check.");
-        return Actions.sendResponse(res, 400, {"message" : "File failed virus check."});
-      } else {
-        fs.writeFileSync(uploadDir+guid+"."+ext, args.swagger.params.upfile.value.buffer);
-        var obj = args.swagger.params;
-        // Strip security tags - these will not be updated on this route.
-        delete obj.tags;
-        defaultLog.info("Incoming updated object:", obj._id);
-        // Update file location
-        obj.internalURL = uploadDir+guid+"."+ext;
-        // Update who did this?
-        obj._addedBy = args.swagger.params.auth_payload.preferred_username;
-        doc._application = _application;
-        doc._comment = _comment;
-        doc._decision = _decision;
-        doc.displayName = displayName;
-        doc.passedAVCheck = true;
-        var Document = require('mongoose').model('Document');
-        Document.findOneAndUpdate({_id: objId}, obj, {upsert:false, new: true}, function (err, o) {
-          if (o) {
-            // defaultLog.info("o:", o);
-            return Actions.sendResponse(res, 200, o);
-          } else {
-            defaultLog.info("Couldn't find that object!");
-            return Actions.sendResponse(res, 404, {});
-          }
-        });
-      }
-    });
-  } catch (e) {
-    defaultLog.info("Error:", e);
-    // Delete the path details before we return to the caller.
-    delete e['path'];
-    return Actions.sendResponse(res, 400, e);
-  }
-};
-
-exports.protectedDownload = function(args, res, next) {
-  // Build match query if on docId route
-  var query = {};
-  if (args.swagger.params.docId) {
-    query = Utils.buildQuery("_id", args.swagger.params.docId.value, query);
-  }
-
-  Utils.runDataQuery('Document',
-                    null, // role
-                    query,
-                    ["internalURL", "documentFileName", "internalMime"], // Fields
-                    null, // sort warmup
-                    null, // sort
-                    null, // skip
-                    null, // limit
-                    false) // count
-  .then(function (data) {
-    if (data && data.length === 1) {
-      var blob = data[0];
-      if (fs.existsSync(blob.internalURL)) {
-        var stream 	= fs.createReadStream(blob.internalURL);
-        var stat 	= fs.statSync(blob.internalURL);
-        res.setHeader('Content-Length', stat.size);
-        res.setHeader('Content-Type', blob.internalMime);
-        res.setHeader('Content-Disposition', 'inline;filename="' + blob.documentFileName + '"');
-        stream.pipe(res);
-			}
-    } else {
-      return Actions.sendResponse(res, 404, {});
-    }
-  });
-};
-
-exports.protectedDelete = function (args, res, next) {
-  var objId = args.swagger.params.docId.value;
-  defaultLog.info("Deleting Document:", objId);
-
-  var Document = require('mongoose').model('Document');
-  Document.findOne({_id: objId, isDeleted: false}, function (err, o) {
-    if (o) {
-      defaultLog.info("o:", o);
-
-      // Set the deleted flag.
-      Actions.delete(o)
-      .then(function (deleted) {
-        // Deleted successfully
-        return Actions.sendResponse(res, 200, deleted);
-      }, function (err) {
-        // Error
-        return Actions.sendResponse(res, 400, err);
-      });
-    } else {
-      defaultLog.info("Couldn't find that object!");
-      return Actions.sendResponse(res, 404, {});
-    }
-  });
-};
