# API/api/swagger/swagger.yaml
@@ -20,11 +20,6 @@ tags:
   externalDocs:
     description: "Find out more about our API"
     url: "https://github.com/BCDevExchange-CodeChallenge/CodeChallenge8-repo2.git"
-- name: "document"
-  description: "Operations about Documents"
-  externalDocs:
-    description: "Find out more about our API"
-    url: "https://github.com/BCDevExchange-CodeChallenge/CodeChallenge8-repo2.git"
 schemes:
   - http
 securityDefinitions:
@@ -108,24 +103,6 @@ definitions:
       - dateIntroBC
       - description
       - image
-
-### Document Definitions
-  DocumentObject:
-    type: object
-    properties:
-      displayName:
-        type: string
-        example: "A cool document"
-        ## FUTURE: add more fields here
-  DocumentFields:
-    type: string
-    description: "Optional fields to return"
-    example: displayName|documentFileName
-    enum: &documentFields
-      - displayName
-      - documentFileName
-      - internalURL
-      - internalMime
 
 ###
 ### Path Definitions
@@ -534,283 +511,6 @@ paths:
           description: "Success"
           schema:
             $ref: "#/definitions/SpeciesObject"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-
-## Documents
-  /document:
-    x-swagger-router-controller: document
-    options:
-      tags:
-        - document
-      operationId: protectedOptions
-      summary: "Pre-flight request"
-      description: "Options on Document Route"
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/DocumentObject"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-    post:
-      tags:
-        - document
-      operationId: protectedPost
-      summary: "Create a new document"
-      description: "Create a new document object"
-      security:
-        - Bearer: []
-      x-security-scopes:
-        - seism_admin
-        - write:document
-      consumes:
-        - multipart/form-data
-      parameters:
-        - name: upfile
-          in: formData
-          description: "The file to upload"
-          required: true
-          type: file
-        - name: _species
-          in: formData
-          description: "The species object to bind this document to"
-          required: false
-          type: string
-        - name: displayName
-          in: formData
-          description: "The displayName of the file"
-          required: false
-          type: string
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/DocumentObject"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-    get:
-      tags:
-        - document
-      operationId: protectedGet
-      summary: "Get a list of documents"
-      description: "Authenticated access to retreiving a document"
-      security:
-        - Bearer: []
-      x-security-scopes:
-        - seism_admin
-        - seism_user
-      parameters:
-        - in: query
-          name: _species
-          description: "Documents relating to a particular species object(s)"
-          type: array
-          required: false
-          collectionFormat: pipes
-          items:
-            type: string
-        - in: query
-          name: fields
-          description: "Document fields to return"
-          required: false
-          type: array
-          collectionFormat: pipes
-          items:
-            type: string
-            enum: *documentFields
-        - in: query
-          name: isDeleted
-          type: boolean
-          required: false
-          description: "Documents that are deleted or not"
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/DocumentObject"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-  /document/{docId}:
-    x-swagger-router-controller: document
-    options:
-      tags:
-        - document
-      operationId: protectedOptions
-      summary: "Pre-flight request"
-      description: "Options on Document GET Route"
-      parameters:
-        - name: docId
-          in: path
-          description: "ID of document to get"
-          required: true
-          type: "string"
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/DocumentObject"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-    get:
-      tags:
-        - document
-      operationId: protectedGet
-      summary: "Get a document"
-      description: "Authenticated access to retreiving a document"
-      security:
-        - Bearer: []
-      x-security-scopes:
-        - seism_admin
-        - seism_user
-      parameters:
-        - name: docId
-          in: path
-          description: "ID of document to get"
-          required: true
-          type: "string"
-        - in: query
-          name: fields
-          description: "Document fields to return"
-          required: false
-          type: array
-          collectionFormat: pipes
-          items:
-            type: string
-            enum: *documentFields
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/DocumentObject"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-    put:
-      tags:
-        - document
-      operationId: protectedPut
-      summary: "Update/Upload a document"
-      description: "Update a document object"
-      security:
-        - Bearer: []
-      x-security-scopes:
-        - seism_admin
-        - write:document
-      consumes:
-        - multipart/form-data
-      parameters:
-        - name: docId
-          in: path
-          description: "ID of document to update"
-          required: true
-          type: "string"
-        - name: upfile
-          in: formData
-          description: "The file to upload"
-          required: true
-          type: file
-        - name: _species
-          in: formData
-          description: "The species object to bind this document to"
-          required: false
-          type: string
-        - name: displayName
-          in: formData
-          description: "The displayName of the file"
-          required: false
-          type: string
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/DocumentObject"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-    delete:
-      tags:
-        - document
-      operationId: protectedDelete
-      summary: "Delete a document"
-      description: "Delete a document object"
-      security:
-        - Bearer: []
-      x-security-scopes:
-        - seism_admin
-      consumes:
-        - application/json
-      parameters:
-        - name: docId
-          in: path
-          description: "ID of document to delete"
-          required: true
-          type: "string"
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/DocumentObject"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-  /document/{docId}/download:
-    x-swagger-router-controller: document
-    options:
-      tags:
-        - document
-      operationId: protectedOptions
-      summary: "Pre-flight request"
-      description: "Options on Document GET Download Route"
-      parameters:
-        - name: docId
-          in: path
-          description: "ID of document to get"
-          required: true
-          type: "string"
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/DocumentObject"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-    get:
-      tags:
-        - document
-      operationId: protectedDownload
-      summary: "Download a document"
-      description: "Authenticated access to retrieving a document binary"
-      security:
-        - Bearer: []
-      x-security-scopes:
-        - seism_admin
-        - seism_user
-      parameters:
-        - name: docId
-          in: path
-          description: "ID of document to download"
-          required: true
-          type: "string"
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/DocumentObject"
         "403":
           description: "Access Denied"
           schema:
